--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,18 @@
 @tailwind components;
 @tailwind utilities;
 
-body, .font-nunito {
-  font-family: "Nunito", sans-serif;
+body {
+  @apply bg-blue-custom font-nunito;
+}
+
+.navbar {
+  @apply bg-sky-custom bg-opacity-80 shadow-lg size-full flex items-center h-14 justify-center gap-12 sticky top-0
+}
+
+.nav-item {
+  @apply text-lg text-slate-300 font-bold cursor-pointer hover:text-white;
+}
+
+.footer {
+  @apply size-full bg-sky-custom flex p-4 items-center justify-start h-7;
 }
