--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Odor+Mean+Chey&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -8,13 +9,17 @@ body {
 }
 
 .navbar {
-  @apply bg-sky-custom bg-opacity-80 shadow-lg size-full flex items-center h-14 justify-center gap-12 sticky top-0
+  @apply bg-sky-custom bg-opacity-90 shadow-lg shadow-gray-800 size-full flex items-center h-14 justify-center gap-12 sticky top-0;
 }
 
 .nav-item {
-  @apply text-lg text-slate-300 font-bold cursor-pointer hover:text-white;
+  @apply text-lg font-bold cursor-pointer hover:text-white;
 }
 
 .footer {
   @apply size-full bg-sky-custom flex p-4 items-center justify-start h-7;
+}
+
+.hero {
+  @apply size-full h-hero bg-no-repeat bg-cover bg-center bg-[url('/background.png')] flex p-8 flex-col items-center justify-center gap-10;
 }
