--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,27 @@ body {
 .text {
   @apply text-base font-bold;
 }
+
+.wrapper {
+  @apply w-full min-h-screen py-8 px-2 mb-10 flex items-center justify-center gap-8 flex-wrap;
+}
+
+.card {
+  @apply border-3 w-56 h-80 p-5 rounded-2xl relative cursor-pointer transition-transform duration-300 hover:scale-110 flex flex-col items-center justify-center text-white bg-sky-custom;
+}
+
+.card-image {
+  @apply rounded-full object-cover border-2 w-32 h-32;
+}
+
+.card-column {
+  @apply flex items-center flex-col text-center;
+}
+
+.card-name {
+  @apply text-xl font-bold;
+}
+
+.card-row {
+  @apply size-full h-auto flex items-start justify-between px-1;
+}
